DBZ-6638 add Cassandra libraries path